--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@octokit/rest": "^15.9.5",
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
+    "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "jira-connector": "^2.8.0"
+    "jira-connector": "^2.8.0",
+    "jsonwebtoken": "^8.3.0",
+    "morgan": "^1.9.0"
   },
   "devDependencies": {
     "eslint": "^5.3.0"
