--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.9.0"
   },
   "devDependencies": {
-    "eslint": "^5.3.0"
+    "eslint": "^5.3.0",
+    "yargs": "^12.0.2"
   }
 }
