--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "url": "https://github.com/unicode-org/jira-github-pr-check"
   },
   "scripts": {
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "start": "node app.js"
   },
   "author": "Shane F. Carr",
   "license": "Unicode-DFS-2016",
