--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@octokit/rest": "^16.26.0",
     "body-parser": "^1.19.0",
     "cookie-session": "^1.3.3",
+    "delay": "^6.0.0",
     "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.17.3",
